# take-a-break

./: README.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  player.rs  ui_handler.rs  utils.rs
src-tauri/src/ui_handler/: alarm_manager.rs
src-tauri/src/ui_handler/alarm_manager/: alarm.rs  alarm_utils.rs  types.rs
ui/: _index.pug  app.js  app.pug  backend-handler.js  constants.js  from_hours.pug  help.js  help.pug  hours.pug  index.html  index.js  index.pug  intervals.pug  logger.js  package-lock.json  package.json  pubsub.js  router.js  rule-editor.js  rule_editor.pug  rules.js  rules.pug  splash.js  splash.pug  status.js  status.pug  styles.css  symbols.pug  tabs.js  to_hours.pug  utils.js  vite.config.js
