[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"
rodio = "0.17"
chrono = "0.4.43"
log4rs = "1.4.0"
#tokio = "1.49.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
plist = "1.7.4"
dirs = "6.0.0"

[features]
default = []
debug = []


